--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Responsive Images</title>
-    <link rel="stylesheet" href="ResponsiveImages.css"/>
+    <link rel="stylesheet" href="CSS/ResponsiveImages.css"/>
 </head>
 <body>
                <ul>
